# plp-a-random-service

./: .gitignore  .terraform.lock.hcl  .terraform.tfstate.lock.info  Dockerfile  README.md  deployment.tf  docker-compose.yml  external_resources.tf  main.tf  pyproject.toml  resources.tf  security.tf  terraform.tfstate  terraform.tfstate.backup  variables.tf
.github/workflows/: deployment_pipeline.yml  update_desired_count.yml
scripts/: kill_oldest_task.sh
service/: run.py
service/application/logging/: http_status_filter.py  log.py
service/ports/input/: api.py  aws_cli.py
