[tool.poetry]
name = "a-random-service"
version = "0.1.0"
description = "PLP final project"
authors = ["IsmaelSendrosCodurance <128392676+IsmaelSendrosCodurance@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

